--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
     body {
       font-family: 'Inter', sans-serif;
-      background: black;
-      color: white;
+      background: #000;
+      color: #fff;
     }
 
     .center-screen {
@@ -25,63 +25,102 @@
       align-items: center;
       flex-direction: column;
       text-align: center;
+      padding: 20px;
     }
 
     .button {
-      background: white;
-      color: black;
-      padding: 10px 20px;
+      background: #fff;
+      color: #000;
+      padding: 12px 30px;
       border: none;
-      border-radius: 10px;
+      border-radius: 50px;
       cursor: pointer;
+      font-size: 1rem;
       font-weight: bold;
       margin-top: 20px;
+      transition: all 0.3s ease;
     }
 
     .button:hover {
-      background: #ccc;
+      background: #ddd;
     }
 
     .main-content {
       display: none;
-      background: #f2f4f8;
-      color: #333;
-      padding: 30px;
+      background: #111;
+      color: #fff;
+      padding: 40px 20px;
+      text-align: center;
+      min-height: 100vh;
+    }
+
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 10px;
+    }
+
+    .subtitle {
+      color: #ccc;
+      font-size: 1.2rem;
+      margin-bottom: 30px;
     }
 
     .submenu {
-      margin-top: 20px;
+      margin-top: 30px;
     }
 
     .submenu button {
-      margin: 5px;
-      padding: 10px 15px;
-      background: #0077cc;
-      color: white;
+      margin: 10px;
+      padding: 10px 20px;
+      background: #fff;
+      color: #000;
       border: none;
-      border-radius: 8px;
+      border-radius: 30px;
       cursor: pointer;
+      font-size: 1rem;
+      transition: all 0.3s ease;
     }
 
     .submenu button:hover {
-      background: #005fa3;
+      background: #ccc;
     }
 
     .section {
       display: none;
-      margin-top: 20px;
-      background: white;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.08);
+      background: #1a1a1a;
+      padding: 30px;
+      margin-top: 30px;
+      border-radius: 15px;
+      max-width: 700px;
+      margin-left: auto;
+      margin-right: auto;
+      text-align: left;
     }
 
-    h2 {
+    .section h2 {
+      margin-bottom: 15px;
+      font-size: 1.8rem;
+      color: #fff;
+    }
+
+    .section p, .section li {
+      color: #ccc;
+      font-size: 1rem;
       margin-bottom: 10px;
     }
 
     ul {
-      margin-left: 20px;
+      padding-left: 20px;
+    }
+
+    @media (max-width: 600px) {
+      h1 {
+        font-size: 2rem;
+      }
+
+      .section {
+        padding: 20px;
+      }
     }
   </style>
 </head>
@@ -90,12 +129,14 @@
   <!-- Pantalla de inicio -->
   <div class="center-screen" id="startScreen">
     <h1>Penta Hosting</h1>
+    <p class="subtitle">Tu sitio, nuestra responsabilidad. Hosting rápido, seguro y confiable.</p>
     <button class="button" onclick="enterSite()">Entrar</button>
   </div>
 
   <!-- Contenido principal -->
   <div class="main-content" id="mainContent">
-    <h1>🏠 Bienvenido a El Penta Hosting</h1>
+    <h1>Bienvenido a Penta Hosting</h1>
+    <p class="subtitle">El mejor servicio de hosting para tus proyectos en línea</p>
 
     <div class="submenu">
       <button onclick="showSection('info')">Información de Penta Hosting</button>
@@ -103,31 +144,34 @@
       <button onclick="showSection('estado')">Ver Mi Hosting</button>
     </div>
 
-    <!-- Sección de Información -->
+    <!-- Sección: Información -->
     <div class="section" id="info">
       <h2>Información de Penta Hosting</h2>
-      <p><strong>Propietario:</strong> Primitivo</p>
-      <p><strong>Ubicación:</strong> Hosting México</p>
+      <p><strong>Propietario:</strong> Primitivo González, apasionado por la tecnología y el internet libre.</p>
+      <p><strong>Ubicación:</strong> México. Servidores rápidos, conectados directamente a los mejores centros de datos del país.</p>
+      <p>En Penta Hosting ofrecemos soluciones accesibles y confiables para todo tipo de sitios web. Nuestro objetivo es que cualquiera, desde un estudiante hasta una empresa, pueda tener presencia en línea sin complicaciones.</p>
     </div>
 
-    <!-- Sección de Planes -->
+    <!-- Sección: Planes -->
     <div class="section" id="planes">
       <h2>Planes Disponibles</h2>
       <p><strong>Plan Normal – $20 USD/mes</strong></p>
       <ul>
-        <li>10 GB de almacenamiento SSD</li>
+        <li>10 GB de almacenamiento SSD ultrarrápido</li>
         <li>100 GB de transferencia mensual</li>
         <li>1 dominio incluido</li>
-        <li>Certificado SSL gratuito</li>
-        <li>Soporte técnico 24/7</li>
+        <li>Certificado SSL gratuito (https)</li>
+        <li>Soporte técnico personalizado 24/7</li>
       </ul>
+      <p>¡Ideal para sitios personales, pequeños negocios o blogs en crecimiento! Pronto añadiremos planes premium con mayores beneficios y espacio.</p>
     </div>
 
-    <!-- Sección de Estado -->
+    <!-- Sección: Estado -->
     <div class="section" id="estado">
       <h2>Mi Hosting</h2>
-      <p>No tienes contratos activos en este momento.</p>
-      <!-- Aquí podrías conectar con backend en el futuro para mostrar datos reales -->
+      <p>Actualmente no tienes ningún contrato activo.</p>
+      <p>Cuando contrates un plan, aquí podrás ver toda la información sobre tu hosting, fechas de vencimiento, opciones de renovación y más.</p>
+      <p><em>¿Listo para comenzar tu proyecto?</em> ¡Ve a la sección de planes y contrata el que más se ajuste a ti!</p>
     </div>
   </div>
 
@@ -138,14 +182,10 @@
     }
 
     function showSection(sectionId) {
-      // Oculta todas las secciones
       const sections = document.querySelectorAll('.section');
       sections.forEach(sec => sec.style.display = 'none');
-
-      // Muestra la seleccionada
       document.getElementById(sectionId).style.display = 'block';
     }
   </script>
 </body>
 </html>
-
