--- a/index.html
+++ b/index.html
@@ -2,125 +2,122 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>El Penta Hosting</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Penta Hosting</title>
+
+  <!-- Fuente -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+
   <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
+    /* ----------------- Variables rápidas ----------------- */
+    :root {
+      --clr-bg-filter: rgba(0, 0, 0, 0.65); /* oscurece la imagen */
+      --clr-text-main: #fff;
+      --clr-text-sub: #ccc;
+      --clr-accent: #fff;
+      --clr-accent-hover: #ddd;
+      --radius-pill: 50px;
     }
+
+    /* ----------------- Reset y base ----------------- */
+    * { box-sizing: border-box; margin: 0; padding: 0; }
 
     body {
       font-family: 'Inter', sans-serif;
-      background: #000;
-      color: #fff;
+      color: var(--clr-text-main);
+      min-height: 100vh;
+      position: relative;
+      overflow-x: hidden;
     }
 
+    /* Imagen de fondo en pantalla completa */
+    body::before {
+      content: '';
+      position: fixed;
+      inset: 0;
+      /* 🔄 Cambia aquí si tu ruta/archivo es diferente */
+      background: url('images/background.jpg') center / cover no-repeat;
+      z-index: -2;
+    }
+
+    /* Capa oscura para que el texto se lea */
+    body::after {
+      content: '';
+      position: fixed;
+      inset: 0;
+      background: var(--clr-bg-filter);
+      z-index: -1;
+    }
+
+    /* ----------------- Utilidades ----------------- */
     .center-screen {
       height: 100vh;
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
-      flex-direction: column;
       text-align: center;
       padding: 20px;
     }
 
-    .button {
-      background: #fff;
+    .button,
+    .button-link {
+      display: inline-block;
+      background: var(--clr-accent);
       color: #000;
       padding: 12px 30px;
       border: none;
-      border-radius: 50px;
+      border-radius: var(--radius-pill);
       cursor: pointer;
       font-size: 1rem;
       font-weight: bold;
-      margin-top: 20px;
-      transition: all 0.3s ease;
+      transition: background 0.3s ease;
+      text-decoration: none; /* para los enlaces */
     }
-
-    .button:hover {
-      background: #ddd;
-    }
+    .button:hover,
+    .button-link:hover { background: var(--clr-accent-hover); }
 
     .main-content {
       display: none;
-      background: #111;
-      color: #fff;
       padding: 40px 20px;
       text-align: center;
       min-height: 100vh;
     }
 
-    h1 {
-      font-size: 2.5rem;
-      margin-bottom: 10px;
-    }
+    h1 { font-size: 2.5rem; margin-bottom: 10px; }
+    .subtitle { color: var(--clr-text-sub); font-size: 1.2rem; margin-bottom: 30px; }
 
-    .subtitle {
-      color: #ccc;
-      font-size: 1.2rem;
-      margin-bottom: 30px;
-    }
-
-    .submenu {
-      margin-top: 30px;
-    }
-
+    .submenu { margin-top: 30px; }
     .submenu button {
       margin: 10px;
       padding: 10px 20px;
-      background: #fff;
+      background: var(--clr-accent);
       color: #000;
       border: none;
       border-radius: 30px;
       cursor: pointer;
       font-size: 1rem;
-      transition: all 0.3s ease;
+      transition: background 0.3s ease;
     }
-
-    .submenu button:hover {
-      background: #ccc;
-    }
+    .submenu button:hover { background: var(--clr-accent-hover); }
 
     .section {
       display: none;
-      background: #1a1a1a;
+      background: rgba(0,0,0,0.5);
       padding: 30px;
       margin-top: 30px;
       border-radius: 15px;
       max-width: 700px;
-      margin-left: auto;
-      margin-right: auto;
+      margin-inline: auto;
       text-align: left;
     }
-
-    .section h2 {
-      margin-bottom: 15px;
-      font-size: 1.8rem;
-      color: #fff;
-    }
-
-    .section p, .section li {
-      color: #ccc;
-      font-size: 1rem;
-      margin-bottom: 10px;
-    }
-
-    ul {
-      padding-left: 20px;
-    }
+    .section h2 { margin-bottom: 15px; font-size: 1.8rem; color: var(--clr-text-main); }
+    .section p, .section li { color: var(--clr-text-sub); font-size: 1rem; margin-bottom: 10px; }
+    ul { padding-left: 20px; }
 
     @media (max-width: 600px) {
-      h1 {
-        font-size: 2rem;
-      }
-
-      .section {
-        padding: 20px;
-      }
+      h1 { font-size: 2rem; }
+      .section { padding: 20px; }
     }
   </style>
 </head>
@@ -128,6 +125,8 @@
 
   <!-- Pantalla de inicio -->
   <div class="center-screen" id="startScreen">
+    <!-- Si quieres un logotipo aparte, descomenta la línea siguiente y sube tu logo en /images -->
+    <!-- <img src="images/logo.png" alt="Logo Penta Hosting" width="180" style="margin-bottom: 20px;" /> -->
     <h1>Penta Hosting</h1>
     <p class="subtitle">Tu sitio, nuestra responsabilidad. Hosting rápido, seguro y confiable.</p>
     <button class="button" onclick="enterSite()">Entrar</button>
@@ -164,6 +163,11 @@
         <li>Soporte técnico personalizado 24/7</li>
       </ul>
       <p>¡Ideal para sitios personales, pequeños negocios o blogs en crecimiento! Pronto añadiremos planes premium con mayores beneficios y espacio.</p>
+
+      <!-- Enlace a Hostinger (lo que pediste) -->
+      <a href="https://www.hostinger.com/" target="_blank" rel="noopener noreferrer" class="button-link">
+        Ver más planes en Hostinger
+      </a>
     </div>
 
     <!-- Sección: Estado -->
@@ -175,17 +179,17 @@
     </div>
   </div>
 
+  <!-- ----------------- Scripts ----------------- -->
   <script>
     function enterSite() {
       document.getElementById('startScreen').style.display = 'none';
       document.getElementById('mainContent').style.display = 'block';
     }
-
     function showSection(sectionId) {
-      const sections = document.querySelectorAll('.section');
-      sections.forEach(sec => sec.style.display = 'none');
+      document.querySelectorAll('.section').forEach(sec => sec.style.display = 'none');
       document.getElementById(sectionId).style.display = 'block';
     }
   </script>
+
 </body>
 </html>
