--- a/index.html
+++ b/index.html
@@ -2,52 +2,8 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Penta Hosting</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #f4f4f4;
-      color: #333;
-    }
-
-    .center-screen {
-      height: 100vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      padding: 20px;
-      background: #0066cc;
-      color: white;
-    }
-
-    h1 {
-      margin-bottom: 10px;
-    }
-
-    .subtitle {
-      margin-bottom: 20px;
-    }
-
-    .button {
-      padding: 10px 20px;
-      font-size: 16px;
-      background: white;
-      color: #0066cc;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    .main-content {
-      display: none;
-      padding: 30px;
-    }
-
     .submenu {
       margin-bottom: 20px;
     }
@@ -79,6 +35,10 @@
 
     .button-link:hover {
       background: #004999;
+    }
+
+    .main-content {
+      display: none; /* Ocultar al inicio para que se muestre con el botón */
     }
   </style>
 </head>
@@ -118,7 +78,6 @@
       </ul>
       <p>¡Ideal para sitios personales o pequeños negocios!</p>
 
-      <!-- Enlace a Hostinger -->
       <a href="https://www.hostinger.com/" target="_blank" class="button-link">
         Ver más planes en Hostinger
       </a>
